# balanced-trees

./: .gitignore  CMakeLists.txt  README.md  main.cpp  report.ipynb
.github/workflows/: blank.yml  cmake.yml  local_docker_test.yml
.ipynb_checkpoints/: report-checkpoint.ipynb
profiler/: CMakeLists.txt  profiler.cpp  profiler.hpp
profiler/results/: avl.csv  cartesian.csv  set.csv  splay.csv
treelib/: .gitignore  CMakeLists.txt
treelib/include/: avl.hpp  cartesian.hpp  iterator.hpp  splay.hpp
treelib/include/detail/: avl.tpp  cartesian.tpp  iterator.tpp  node.hpp  splay.tpp
treelib/single_header/: CMakeLists.txt  merge_order.hpp  single_header.hpp
treelib/tests/: CMakeLists.txt  avl.cpp  comparators.hpp  operations.hpp  seed.hpp  stress.cpp  stress_templates.hpp
